ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - rso-api.westeurope.cloudapp.azure.com
      secretName: tls-secret-prd
  rules:
    - host: rso-api.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /billing(/|$)(.*)
            backend:
              serviceName: billing
              servicePort: 80
